--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -207,35 +207,35 @@
         <td><span style="white-space:nowrap;"><a href="/wiki/Lightning" title="Lightning"><img alt="Element Lightning" src="/Site_Honkai/Art_splash/Element_Lightning.webp" class=" lazyloaded"></a> <span class="text-lightning"><b>Trovão</b></span></span>
         </td></tr>
         <tr>
-        <td><a href="/wiki/Bronya" title="Bronya"><img alt="Character Bronya Icon" src="/Site_Honkai/Art_splash/Character_Bronya_Splash_Art.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Bronya Icon.png" data-image-key="Character_Bronya_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/0/0f/Character_Bronya_Icon.png/revision/latest/scale-to-width-down/40?cb=20220608122827" class=" lazyloaded"></a>
+        <td><a href="/wiki/Bronya" title="Bronya"><img alt="Character Bronya Icon" src="/Site_Honkai/Art_Icon/Character_Bronya_Icon.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Bronya Icon.png" data-image-key="Character_Bronya_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/0/0f/Character_Bronya_Icon.png/revision/latest/scale-to-width-down/40?cb=20220608122827" class=" lazyloaded"></a>
         </td>
         <td><a href="/wiki/Bronya" title="Bronya">Bronya</a>
         </td>
         <td><span style="white-space:nowrap;">✦ ✦ ✦ ✦ ✦</span>
         </td>
-        <td><span style="white-space:nowrap;"><a href="/Site_Honkai/Art_Icon/Character_Bronya_Icon.webp" title="The Harmony"><img alt="Path The Harmony" src="/Site_Honkai/Art_splash/Path_The_Harmony.webp" class=" ls-is-cached lazyloaded"></a> <a href="/wiki/The_Harmony" title="The Harmony">A Harmonia</a></span>
+        <td><span style="white-space:nowrap;"><a href="/Site_Honkai/caminhos/harmonia.html" title="The Harmony"><img alt="Path The Harmony" src="/Site_Honkai/Art_splash/Path_The_Harmony.webp" class=" ls-is-cached lazyloaded"></a> <a href="/wiki/The_Harmony" title="The Harmony">A Harmonia</a></span>
         </td>
         <td><span style="white-space:nowrap;"><a href="/wiki/Wind" title="Wind"><img alt="Element Wind" src="/Site_Honkai/Art_splash/Element_Wind.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Element Wind.png" data-image-key="Element_Wind.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/f4/Element_Wind.png/revision/latest/scale-to-width-down/20?cb=20220610121015" class=" lazyloaded"></a> <span class="text-wind"><b>Vento</b></span></span>
         </td></tr>
         <tr>
-        <td><a href="/wiki/Clara" title="Clara"><img alt="Character Clara Icon" src="/Site_Honkai/Art_splash/Character_Clara_Splash_Art.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Clara Icon.png" data-image-key="Character_Clara_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/a/a4/Character_Clara_Icon.png/revision/latest/scale-to-width-down/40?cb=20220608122654" class=" lazyloaded"></a>
+        <td><a href="/wiki/Clara" title="Clara"><img alt="Character Clara Icon" src="/Site_Honkai/Art_Icon/Character_Clara_Icon.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Clara Icon.png" data-image-key="Character_Clara_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/a/a4/Character_Clara_Icon.png/revision/latest/scale-to-width-down/40?cb=20220608122654" class=" lazyloaded"></a>
         </td>
         <td><a href="/wiki/Clara" title="Clara">Clara</a>
         </td>
         <td><span style="white-space:nowrap;">✦ ✦ ✦ ✦ ✦</span>
         </td>
-        <td><span style="white-space:nowrap;"><a href="/Site_Honkai/Art_Icon/Character_Clara_Icon.webp" title="The Destruction"><img alt="Path The Destruction" src="/Site_Honkai/Art_splash/Path_The_Destruction.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Path The Destruction.png" data-image-key="Path_The_Destruction.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/3/37/Path_The_Destruction.png/revision/latest/scale-to-width-down/20?cb=20230508230545" class=" ls-is-cached lazyloaded"></a> <a href="/Site_Honkai/caminhos/destruicao.html" title="The Destruction">A Destruição</a></span>
+        <td><span style="white-space:nowrap;"><a href="/Site_Honkai/caminhos/destruicao.html" title="The Destruction"><img alt="Path The Destruction" src="/Site_Honkai/Art_splash/Path_The_Destruction.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Path The Destruction.png" data-image-key="Path_The_Destruction.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/3/37/Path_The_Destruction.png/revision/latest/scale-to-width-down/20?cb=20230508230545" class=" ls-is-cached lazyloaded"></a> <a href="/Site_Honkai/caminhos/destruicao.html" title="The Destruction">A Destruição</a></span>
         </td>
         <td><span style="white-space:nowrap;"><a href="/wiki/Physical" title="Physical"><img alt="Element Physical" src="/Site_Honkai/Art_splash/Element_Physical.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Element Physical.png" data-image-key="Element_Physical.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/5/57/Element_Physical.png/revision/latest/scale-to-width-down/20?cb=20220610120901" class=" lazyloaded"></a> <span class="text-physical"><b>Fisico</b></span></span>
         </td></tr>
         <tr>
-        <td><a href="/wiki/Dan_Heng" title="Dan Heng"><img alt="Character Dan Heng Icon" src="/Site_Honkai/Art_splash/Character_Dan_Heng_Splash_Art.webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Dan Heng Icon.png" data-image-key="Character_Dan_Heng_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/1/1a/Character_Dan_Heng_Icon.png/revision/latest/scale-to-width-down/40?cb=20220608122758" class=" lazyloaded"></a>
+        <td><a href="/wiki/Dan_Heng" title="Dan Heng"><img alt="Character Dan Heng Icon" src="/Site_Honkai/Art_Icon/Character_Dan_Heng_Icon (1).webp" decoding="async" loading="lazy" width="40" height="40" data-image-name="Character Dan Heng Icon.png" data-image-key="Character_Dan_Heng_Icon.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/1/1a/Character_Dan_Heng_Icon.png/revision/latest/scale-to-width-down/40?cb=20220608122758" class=" lazyloaded"></a>
         </td>
         <td><a href="/wiki/Dan_Heng" title="Dan Heng">Dan Heng</a>
         </td>
         <td><span style="white-space:nowrap;">✦ ✦ ✦ ✦</span>
         </td>
-        <td><span style="white-space:nowrap;"><a href="/Site_Honkai/Art_Icon/Character_Dan_Heng_Icon (1).webp" title="The Hunt"><img alt="Path The Hunt" src="/Site_Honkai/Art_splash/Path_The_Hunt.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Path The Hunt.png" data-image-key="Path_The_Hunt.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/1/1c/Path_The_Hunt.png/revision/latest/scale-to-width-down/20?cb=20230511094214" class=" lazyloaded"></a> <a href="/Site_Honkai/caminhos/caca.html" title="The Hunt">A Caça</a></span>
+        <td><span style="white-space:nowrap;"><a href="/Site_Honkai/caminhos/caca.html" title="The Hunt"><img alt="Path The Hunt" src="/Site_Honkai/Art_splash/Path_The_Hunt.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Path The Hunt.png" data-image-key="Path_The_Hunt.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/1/1c/Path_The_Hunt.png/revision/latest/scale-to-width-down/20?cb=20230511094214" class=" lazyloaded"></a> <a href="/Site_Honkai/caminhos/caca.html" title="The Hunt">A Caça</a></span>
         </td>
         <td><span style="white-space:nowrap;"><a href="/wiki/Wind" title="Wind"><img alt="Element Wind" src="/Site_Honkai/Art_splash/Element_Wind.webp" decoding="async" loading="lazy" width="20" height="20" data-image-name="Element Wind.png" data-image-key="Element_Wind.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/f4/Element_Wind.png/revision/latest/scale-to-width-down/20?cb=20220610121015" class=" lazyloaded"></a> <span class="text-wind"><b>Vento</b></span></span>
         </td></tr>
