--- a/Site_Honkai/personagens/arlan.html
+++ b/Site_Honkai/personagens/arlan.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <title>Arlan</title>
 <head>
 <link rel="stylesheet" type="text/css" href="personagens.css">
 </head>
@@ -8,6 +9,11 @@
         <div class="character-container">
         <div class="character-box">
             <img class="character-image" src="/Site_Honkai/Art_splash/Character_Arlan_Splash_Art.png" alt="Imagem do Personagem">
+        </div>
+        <div class="quote-container">
+          <div class="quote-box">
+            <i>"Tenho orgulho de minhas feridas. Elas são um lembrete de que sou capaz de proteger a todos."<sup id="cite_ref-Arlan_EN/JP_1-2" class="reference"><a href="#cite_note-Arlan_EN/JP-1"></a></sup></i>
+          </div>
         </div>
     <table class="character-table">
         <h2><span class="mw-headline" id="Combat_Skills"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dados do personagem</font></font></span></h2>
@@ -53,7 +59,8 @@
         </tr>
     </table>
         <div>
-    <h2><span class="mw-headline" id="Ascensions_and_Stats"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ascensões e estatísticas</font></font></span></h2> 
+    <h2><span class="mw-headline" id="Ascensions_and_Stats"><font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;">Ascensões e estatísticas</font></font></span></h2> 
     <table>
         <thead>
           <tr>
@@ -173,6 +180,217 @@
           </tr>
         </tbody>
     </table>
+    <table>
+      <thead>
+        <tr>
+          <th>Nível</th>
+          <th>Custo de Evolução</th>
+          <th>Materiais de Ascensão do Personagem</th>
+          <th>Materiais Necessários</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>0 → 1 ✦</td>
+          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">3.200</td>
+          <td></td>
+          <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">4</td>
+        </tr>
+        <tr>
+          <td>1 → 2 ✦</td>
+          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">6,400</td>
+            <td></td>
+            <td><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Material A">8</td>
+        </tr>
+        <tr>
+          <td>2 → 3 ✦</td>
+          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">12,800</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">2</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">5</td>
+        </tr>
+        <tr>
+          <td>3 → 4 ✦</td>
+          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">32,000</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">5</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Material A">8</td>
+        </tr>
+        <tr>
+          <td>4 → 5 ✦</td>
+          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">64,000</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">15</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">5</td>
+        </tr>
+        <tr>
+          <td>5 → 6 ✦</td>
+          <td class="cost-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">248,000</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Lightning_Crown_of_the_Past_Shadow.webp" alt="Material A">28</td>
+            <td><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Material A">7</td>
+        </tr>
+      </tbody>
+    </table>
+    <h2><span class="mw-headline" id="Eidolons"><font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;">Habilidades de combate</font></font></span></h2> 
+    <table>            
+      <thead>
+      <tr>
+        <th>Icone</th>
+        <th>Tipo</th>
+        <th>Nome</th>
+        <th>Descrição</th>
+        <th>Marcação</th>
+        <th>Energia</th>
+        <th>Resistência
+          DMG</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Lightning_Rush.webp" alt="Basic"></td>
+        <td>ATK básico</td>
+        <td>Relâmpago</td>
+        <td>Causa Lightning DMG igual a 50%–130% do ATK de Arlan para um único inimigo.</td>
+        <td>Alvo único</td>
+        <td>Geração: 20</td>
+        <td>30</td>
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Shackle_Breaker.webp" alt="Skill"></td>
+        <td>Skill</td>
+        <td>Quebra-grilhões</td>
+        <td>Consome o HP de Arlan igual a 15% de seu HP máximo para lidar com Lightning DMG igual a 120%–300% do ATK de Arlan a um único inimigo. Se Arlan não tiver HP suficiente, seu HP será reduzido para 1 após usar sua Skill.</td>
+        <td>Alvo único</td>
+        <td>Geração: 30</td>
+        <td>60</td>
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Frenzied_Punishment.webp" alt="Ult"></td>
+        <td>Ultimate</td>
+        <td>Punição Frenética</td>
+        <td>Causa Lightning DMG igual a 192%–348% do ATK de Arlan para um único inimigo e Lightning DMG igual a 96%–192% do ATK de Arlan para inimigos adjacentes a ele.</td>
+        <td>Explosão</td>
+        <td>Custo: 110
+          Geração: 5</td>
+        <td>60</td>
+        
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Pain_and_Anger.webp" alt="Talent"></td>
+        <td>Talento</td>
+        <td>Dor e raiva</td>
+        <td>Aumenta o DMG de Arlan para cada porcentagem de HP abaixo de seu HP máximo, até um máximo de 36% a 90% a mais de DMG.</td>
+        <td>Melhorar</td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Skill_Swift_Harvest.webp" alt="Talent"></td>
+        <td>Técnica</td>
+        <td>Colheita rápida</td>
+        <td>Imediatamente ataca o inimigo. Depois de entrar na batalha, causa Lightning DMG igual a 80% do ATK de Arlan para todos os inimigos.</td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+    <h2><span class="mw-headline" id="Eidolons"><font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;">Eidolons</font></font></span></h2> 
+    <table>
+      <thead>
+        <tr>
+          <th>Icone</th>
+          <th>Nome da habilidade</th>
+          <th>Nivel</th>
+          <th>Descrição</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_To_the_Bitter_End.webp" alt="Eidolon"></td>
+          <td>Para o amargo fim</td>
+          <td>1</td>
+          <td>Quando o HP é menor ou igual a 50% do Max HP, aumenta o DMG da Skill em 10%.</td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Breaking_Free.webp" alt="Eidolon"></td>
+          <td>Libertando-se</td>
+          <td>2</td>
+          <td>Usar Skill ou Ultimate remove 1 debuff de si mesmo.</td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Power_Through.webp" alt="Eidolon"></td>
+          <td>Através do poder</td>
+          <td>3</td>
+          <td>Habilidade Nv. +2, até um máximo de Lv. 15.
+            ATK Básico Lv. +1, até um máximo de Lv. 10.</td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Turn_the_Tables.webp" alt="Eidolon"></td>
+          <td>Vire as mesas</td>
+          <td>4</td>
+          <td>Quando atingido por um golpe mortal após entrar na batalha, em vez de ser derrubado, Arlan restaura imediatamente seu HP para 25% de seu HP máximo. Este efeito é removido automaticamente após ser acionado uma vez ou após 2 turno(s) decorridos.</td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Hammer_and_Tongs.webp" alt="Eidolon"></td>
+          <td>Martelo e tenazes</td>
+          <td>5</td>
+          <td>Nível final +2, até um máximo de Lv. 15.
+            Talento Nv. +2, até um máximo de Lv. 15.</td>
+        </tr>
+        <tr>
+          <td class="dark-background"><img src="/Site_Honkai/habilidades/Arlan/Eidolons/Eidolon_Self-Sacrifice.webp" alt="Eidolon"></td>
+          <td>Auto-sacrifício</td>
+          <td>6</td>
+          <td>Quando o HP cai para 50% ou menos, o Ultimate causa 20% a mais de DMG. O multiplicador DMG de DMG tomado pelo inimigo alvo agora se aplica aos inimigos adjacentes também.</td>
+        </tr>
+      </tbody>
+    </table>
+    <h2><span class="mw-headline" id="Eidolons"><font style="vertical-align: inherit;">
+      <font style="vertical-align: inherit;">Traços</font></font></span></h2>
+    
+    <table>
+      <thead>
+        <tr>
+          <th>Custo Total (1 → 6 para rastreamento de ATK básico)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">192.000</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">4</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">8</td>
+        </tr>
+      </tbody>
+    </table>
+    <table>
+      <thead>
+        <tr>
+          <th>Custo total (1 → 10 para um rastreamento)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="material-cell"><img src="/Site_Honkai/Art_splash/Item_Credit.webp" alt="Custo">522.000</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Extinguished_Core.webp" alt="Custo">6</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Glimmering_Core.webp" alt="Custo">10</td>
+          <td class="material-cell"><img src="/Site_Honkai/Materiais/Item_Squirming_Core.webp" alt="Custo">5</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Shattered_Blade.webp" alt="Custo">2</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Lifeless_Blade.webp" alt="Custo">12</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Worldbreaker_Blade.webp" alt="Custo">23</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Destroyer.webp" alt="Custo">3</td>
+          <td class="material-cell"><img src="/Site_Honkai/Itens/Item_Tracks_of_Destiny.webp" alt="Custo">1</td>
+        </tr>
+      </tbody>
+    </table>
+</div>
+<div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #b8783c1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;">
+  <div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;">
+    <i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html" style="color: black;">Voltar para o início</a></font></font></i>
+  </div>
 </div>
 </div>
     </div>
