--- a/Site_Honkai/personagens/arlan.html
+++ b/Site_Honkai/personagens/arlan.html
@@ -75,14 +75,14 @@
         <tbody>
           <tr class="alternating1">
             <td rowspan="2">0✦</td>
-            <td class="centered">1/20</td>
+            <td class="level-container">1/20</td>
             <td>163</td>
             <td>81</td>
             <td>45</td>
             <td>102</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">20/20</td>
+            <td class="level-container">20/20</td>
             <td>318</td>
             <td>159</td>
             <td>87</td>
@@ -90,14 +90,14 @@
           </tr>
           <tr class="alternating2">
             <td rowspan="2">1✦</td>
-            <td class="centered">20/30</td>
+            <td class="level-container">20/30</td>
             <td>383</td>
             <td>191</td>
             <td>105</td>
             <td>102</td>
           </tr>
           <tr class="alternating2">
-            <td class="centered">30/30</td>
+            <td class="level-container">30/30</td>
             <td>465</td>
             <td>232</td>
             <td>128</td>
@@ -105,14 +105,14 @@
           </tr>
           <tr class="alternating1">
             <td rowspan="2">2✦</td>
-            <td class="centered">30/40</td>
+            <td class="level-container">30/40</td>
             <td>530</td>
             <td>265</td>
             <td>146</td>
             <td>102</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">40/40</td>
+            <td class="level-container">40/40</td>
             <td>612</td>
             <td>306</td>
             <td>168</td>
@@ -120,14 +120,14 @@
           </tr>
           <tr class="alternating2">
             <td rowspan="2">3✦</td>
-            <td class="centered">40/50</td>
+            <td class="level-container">40/50</td>
             <td>677</td>
             <td>338</td>
             <td>186</td>
             <td>102</td>
           </tr>
           <tr class="alternating2">
-            <td class="centered">50/50</td>
+            <td class="level-container">50/50</td>
             <td>758</td>
             <td>379</td>
             <td>209</td>
@@ -135,14 +135,14 @@
           </tr>
           <tr class="alternating1">
             <td rowspan="2">4✦</td>
-            <td class="centered">50/60</td>
+            <td class="level-container">50/60</td>
             <td>824</td>
             <td>412</td>
             <td>227</td>
             <td>102</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">60/60</td>
+            <td class="level-container">60/60</td>
             <td>905</td>
             <td>452</td>
             <td>249</td>
@@ -150,14 +150,14 @@
           </tr>
           <tr class="alternating2">
             <td rowspan="2">5✦</td>
-            <td class="centered">60/70</td>
+            <td class="level-container">60/70</td>
             <td>971</td>
             <td>485</td>
             <td>267</td>
             <td>102</td>
           </tr>
           <tr class="alternating2">
-            <td class="centered">70/70</td>
+            <td class="level-container">70/70</td>
             <td>1,052</td>
             <td>526</td>
             <td>290</td>
@@ -165,14 +165,14 @@
           </tr>
           <tr class="alternating1">
             <td rowspan="2">6✦</td>
-            <td class="centered">70/80</td>
+            <td class="level-container">70/80</td>
             <td>1,117</td>
             <td>558</td>
             <td>308</td>
             <td>102</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">80/80</td>
+            <td class="level-container">80/80</td>
             <td>1,199</td>
             <td>599</td>
             <td>330</td>
