--- a/Site_Honkai/personagens/asta.html
+++ b/Site_Honkai/personagens/asta.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Arlan</title>
+  <title>Asta</title>
 <head>
 <link rel="stylesheet" type="text/css" href="personagens.css">
 </head>
@@ -75,14 +75,14 @@
         <tbody>
           <tr class="alternating1">
             <td rowspan="2">0✦</td>
-            <td class="centered">1/20</td>
+            <td class="level-container">1/20</td>
             <td>139</td>
             <td>69</td>
             <td>63</td>
             <td>106</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">20/20</td>
+            <td class="level-container">20/20</td>
             <td>271</td>
             <td>135</td>
             <td>122</td>
@@ -90,14 +90,14 @@
           </tr>
           <tr class="alternating2">
             <td rowspan="2">1✦</td>
-            <td class="centered">20/30</td>
+            <td class="level-container">20/30</td>
             <td>327</td>
             <td>163</td>
             <td>148</td>
             <td>106</td>
           </tr>
           <tr class="alternating2">
-            <td class="centered">30/30</td>
+            <td class="level-container">30/30</td>
             <td>396</td>
             <td>198</td>
             <td>179</td>
@@ -105,14 +105,14 @@
           </tr>
           <tr class="alternating1">
             <td rowspan="2">2✦</td>
-            <td class="centered">30/40</td>
+            <td class="level-container">30/40</td>
             <td>452</td>
             <td>226</td>
             <td>204</td>
             <td>106</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">40/40</td>
+            <td class="level-container">40/40</td>
             <td>522</td>
             <td>261</td>
             <td>236</td>
@@ -120,14 +120,14 @@
           </tr>
           <tr class="alternating2">
             <td rowspan="2">3✦</td>
-            <td class="centered">40/50</td>
+            <td class="level-container">40/50</td>
             <td>577</td>
             <td>288</td>
             <td>362</td>
             <td>106</td>
           </tr>
           <tr class="alternating2">
-            <td class="centered">50/50</td>
+            <td class="level-container">50/50</td>
             <td>647</td>
             <td>323</td>
             <td>292</td>
@@ -135,14 +135,14 @@
           </tr>
           <tr class="alternating1">
             <td rowspan="2">4✦</td>
-            <td class="centered">50/60</td>
+            <td class="level-container">50/60</td>
             <td>702</td>
             <td>351</td>
             <td>318</td>
             <td>106</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">60/60</td>
+            <td class="level-container">60/60</td>
             <td>772</td>
             <td>386</td>
             <td>349</td>
@@ -150,14 +150,14 @@
           </tr>
           <tr class="alternating2">
             <td rowspan="2">5✦</td>
-            <td class="centered">60/70</td>
+            <td class="level-container">60/70</td>
             <td>828</td>
             <td>414</td>
             <td>364</td>
             <td>106</td>
           </tr>
           <tr class="alternating2">
-            <td class="centered">70/70</td>
+            <td class="level-container">70/70</td>
             <td>897</td>
             <td>448</td>
             <td>406</td>
@@ -165,14 +165,14 @@
           </tr>
           <tr class="alternating1">
             <td rowspan="2">6✦</td>
-            <td class="centered">70/80</td>
+            <td class="level-container">70/80</td>
             <td>953</td>
             <td>476</td>
             <td>431</td>
             <td>106</td>
           </tr>
           <tr class="alternating1">
-            <td class="centered">80/80</td>
+            <td class="level-container">80/80</td>
             <td>1,023</td>
             <td>511</td>
             <td>463</td>
